...
                            .multilineTextAlignment(.center)
                            .frame(width: 100)
                    }
                }
            }
        }
        .accessibility(identifier: "mealSummaryGrid")
        .padding()
        .sheet(isPresented: $showingDetail, onDismiss: resetSheetState) {
            MealDetailSheetView(selectedMealID: $selectedMealID)
        }
    }

...
